day-one/step-01/cpu-limit-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: cpu-limit
spec:
  containers:
    - name: cpu-limit
      image: registry.takima.io/school/proxy/cpu-stress
      resources:
        limits:
          cpu: "1"
        requests:
          cpu: "0.5"
      args:
        - -cpus
        - "2"
