day-one/step-01/memory-limit-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: memory-limit
spec:
  containers:
    - name: memory-limit
      image: registry.takima.io/school/proxy/memory-stress
      resources:
        requests:
          memory: "50Mi"
        limits:
          memory: "100Mi"
      command: ["stress"]
      args: ["--vm", "1", "--vm-bytes", "250M", "--vm-hang", "1"]
