day-one/step-01/unicorn-front-pod.yml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: mynginx2
  name: mynginx2
spec:
  containers:
  - image: registry.takima.io/school/proxy/nginx
    name: mynginx2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
