day-one/step-01/unicorn-front-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unicorn-front-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: unicorn.lilian-andres.cpe.takima.school
      http:
        paths:
          - backend:
              service:
                name: unicorn-front-service
                port:
                  number: 80
            path: /
            pathType: Prefix
